--- a/html_css_js/managerhome.html
+++ b/html_css_js/managerhome.html
@@ -39,18 +39,8 @@
 				<th> SUN </th>
 			</tr>
 			<tr>
-				<td> Florence Picciuto </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-			</tr>
-			<tr>
-				<td> Edward Barker</td>
-				<td> </td>
+				<td> Early Shift </td>
+				<td>  </td>
 				<td> </td>
 				<td> </td>
 				<td> </td>
@@ -59,37 +49,7 @@
 				<td> </td>
 			</tr>
 			<tr>
-				<td> Gino Zambelli</td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-			</tr>
-			<tr>
-				<td> Xixuan Zhu</td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-			</tr>
-			<tr>
-				<td> Whizzy Long </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-			</tr>
-			<tr>
-				<td> James Ahsam </td>
+				<td> Late Shift </td>
 				<td> </td>
 				<td> </td>
 				<td> </td>
