A better way of doing it

--- a/web/login.html
+++ b/web/login.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>Login</title>
-		<link rel="stylesheet" href="stylesheet.css" type="text/css"/>
+		<link rel="stylesheet" href="css/stylesheet.css" type="text/css"/>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	</head>
-	
+
 	<body>
-	
+
 	<div class = "tableStart">
 	<div class = "tableBody">
 	<div class = "tableTitle">
@@ -16,14 +16,14 @@
 	</div>
 	</div>
 		<div class = "tableCell2">
-			Username: 
+			Username:
 			<input type="text" id="username">
 		</div>
 	</div>
 	<div class = "tableRow2">
 		<div class = "tableCell3">
 			<br>
-			Password: 
+			Password:
 			<input  id="password" type="password">
 		</div>
 	</div>
@@ -44,6 +44,6 @@
 	</div>
 	</div>
 	</div>
-<script  src="main.js"></script>
+<script  src="js/main.js"></script>
 	</body>
 </html>
