--- a/web/managersignup.html
+++ b/web/managersignup.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>Manager Sign Up</title>
-		<link rel="stylesheet" href="stylesheet.css" type="text/css"/>
+		<link rel="stylesheet" href="css/stylesheet.css" type="text/css"/>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	</head>
 
@@ -48,6 +48,6 @@
 	</div>
 	</div>
 	</div>
-<script  src="main.js"></script>
+<script  src="js/main.js"></script>
 	</body>
 </html>
