--- a/web/requests.html
+++ b/web/requests.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Requests Page</title>
-		<link rel="stylesheet" href="stylesheet.css" type="text/css"/>
+		<link rel="stylesheet" href="css/stylesheet.css" type="text/css"/>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	</head>
 
@@ -60,6 +60,6 @@
 	</div>
 	</div>
 	</div>
-<script  src="main.js"></script>
+<script  src="js/main.js"></script>
 	</body>
 </html>
