--- a/html_css_js/pref.html
+++ b/html_css_js/pref.html
@@ -76,6 +76,10 @@
 				<button id="submitPref" class = "menuButton" type= "submit" value = "Submit Preferences">Submit Preferences</button>
 		</div>
 	</div>
+		<form>
+			<button class="logOutButton" value="Log Out">Log Out</button>
+			<br>
+		</form>	
 	</div>
 	<div class = "tableRow4">
 		<div class = "tableEnd">
