--- a/html_css_js/requests.html
+++ b/html_css_js/requests.html
@@ -51,6 +51,10 @@
 	</div>
 	<div class = "tableRow3">
 		<div class = "submitSection">
+		<form>
+			<button class="logOutButton" value="Log Out">Log Out</button>
+			<br>
+		</form>	
 		</div>
 	</div>
 	<div class = "tableRow4">
