--- a/html_css_js/managerhome.html
+++ b/html_css_js/managerhome.html
@@ -67,6 +67,11 @@
 				<br><br>
 			</form>
 		</div>
+		<form>
+			<br>
+			<button class="logOutButton" value="Log Out">Log Out</button>
+			<br>
+		</form>	
 	</div>
 	<div class = "tableRow4">
 		<div class = "tableEnd">
