--- a/html_css_js/managerpref.html
+++ b/html_css_js/managerpref.html
@@ -94,6 +94,11 @@
 			</form>
 		</div>
 	</div>
+		<form>
+			<br>
+			<button class="logOutButton" value="Log Out">Log Out</button>
+			<br>
+		</form>	
 	</div>
 	<div class = "tableRow4">
 		<div class = "tableEnd">
