--- a/html_css_js/managerratings.html
+++ b/html_css_js/managerratings.html
@@ -104,6 +104,11 @@
 				</form>
 		</div>
 	</div>
+		<form>
+			<br>
+			<button class="logOutButton" value="Log Out">Log Out</button>
+			<br>
+		</form>	
 	</div>
 	<div class = "tableRow4">
 		<div class = "tableEnd">
