--- a/html_css_js/managerrequests.html
+++ b/html_css_js/managerrequests.html
@@ -52,6 +52,11 @@
 	</div>
 	<div class = "tableRow3">
 		<div class = "submitSection">
+		<form>
+			<br>
+			<button class="logOutButton" value="Log Out">Log Out</button>
+			<br>
+		</form>	
 		</div>
 	</div>
 	<div class = "tableRow4">
