--- a/html_css_js/requests.html
+++ b/html_css_js/requests.html
@@ -16,7 +16,7 @@
 	<div>
 		<div class = "menuList">
 			<form action="" >
-			<a href="home.html" class = "menuButton" value = "rota">Rota</a>
+			<a href="home.php" class = "menuButton" value = "rota">Rota</a>
 				<a href="requests.html" class = "presentButton" value = "request">Requests</a>
 				<a href="pref.html" class = "menuButton" value = "preference">Preferences</a>
 				<a href="ratings.html" class = "menuButton" value = "rating">Ratings</a>
@@ -26,35 +26,32 @@
 	<div class = "tableRow2">
 		<div class = "inputSection">
 			<h2> Holiday Request: </h2>
-				<form action="">
+				<form action="requests_submit.php" method="post">
+				<fieldset>
 					<h3>Start Date:</h3>
 					<input type="date" name="startDate"><br><br>
 					<h3>End Date:</h3>
 					<input type="date" name="endDate"><br><br>
-					<input id="submitHReq" type="submit" class = "menuButton" value="Submit Holiday Request">
-				</form>
+					<!--<input id="submitHReq" type="submit" class = "menuButton" value="Submit Holiday Request">-->
 				<br><br>
-				<form action ="">
 					<h2>Cover Request:</h2>
 					<h3>Cover Date:</h3>
 					<input type="date" name="coverDate"><br><br>
 					<h3>Shift Chosen:</h3>
-					<select>
+					<select name="coverTime">
 						<option value ="">Select a Value</option>
-						<option value="early">9am-4pm</option>
-						<option value="late">4pm-11pm</option>
+						<option value="9am-4pm">9am-4pm</option>
+						<option value="4pm-11pm">4pm-11pm</option>
 					</select>
 					<br><br>
-					<input id="submitReq" type="submit" class="menuButton" value="Submit Cover Request">
+					<input type="submit" id="submitHol" class ="signUp" name="submitHol" value="Submit Request" />
+					<!--<input id="submitReq" type="submit" class="menuButton" value="Submit Cover Request">-->
+				</fieldset>
 				</form>
 			</div>
 	</div>
 	<div class = "tableRow3">
 		<div class = "submitSection">
-		<form>
-			<button class="logOutButton" value="Log Out">Log Out</button>
-			<br>
-		</form>	
 		</div>
 	</div>
 	<div class = "tableRow4">
