--- a/html_css_js/requests.html
+++ b/html_css_js/requests.html
@@ -40,8 +40,8 @@
 					<h3>Shift Chosen:</h3>
 					<select name="coverTime">
 						<option value ="">Select a Value</option>
-						<option value="9am-4pm">9am-4pm</option>
-						<option value="4pm-11pm">4pm-11pm</option>
+						<option value="0">9am-4pm</option>
+						<option value="1">4pm-11pm</option>
 					</select>
 					<br><br>
 					<input type="submit" id="submitHol" class ="signUp" name="submitHol" value="Submit Request" />
