--- a/html_css_js/smartrota/index.html
+++ b/html_css_js/smartrota/index.html
@@ -2,4 +2,5 @@
 </head>
 <body>
   <script src="constraints.js" type="text/javascript"></script>
+  <script src="submit.js" type="text/javascript"></script>
 </body>
